made to be a simple format version of the flip and it finally works!

--- a/index.html
+++ b/index.html
@@ -11,21 +11,15 @@
 
 	<script type="text/javascript">
     $(function(){
-        console.log("yo");
         setupFlip();
-    }
+    });
 	</script>
+   
 </head>
 
 <body>
 
-	<h1><a href="http://css3playground.com">css3</a></h1>
-	
-	<p class="instructions">
-	 These cards are using <code>-webkit-transform: rotateY() and rotateX();</code> with some of the 3D settings:
-	 <code>-webkit-transform-style: preserve3d;</code> and <code>-webkit-transform-perspective</code>.<br>
-	 Mozilla browsers are using the <code>-moz-transform</code> equivalents.
-	</p>
+	<h1>FLIP!</h1>
 
 	<div class="hover panel">
 		<div class="front">
