added bootstrap for styling basic layout stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/flip.css" />
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" />
     <script src="js/modernizr.min.js"></script>
@@ -18,35 +18,28 @@
 </head>
 
 <body>
-
-	<h1>FLIP!</h1>
-
-	<div class="hover panel">
-		<div class="front">
-		  <div class="pad">
-        <h2>Mouse Over Me!</h2>
-        <p>
-          The effect on this box can be done using 100% CSS.<br><br>
-          The other boxes all require some Javascript, but the animation is driven by CSS3.
-        </p>
-			</div>
-		</div>
-		<div class="back">
-			<div class="pad">
-				<h2>check you on the flip side</h2>
-			</div>
-		</div>
-	</div>
-
-  <div class="click swing panel">
-    <div class="front">
-      <h2>Swing like a gate</h2>
+    <div class="container">
+    <div class="page-header">
+        <h1>Photo SlideShow</h1>
     </div>
-    <div class="back">
-      <div class="pad">
-      <h2>Any axis is possible</h2>
-      </div>
+    	<div class="hover panel">
+    		<div class="front">
+    		    <div class="pad">
+                    <h2>Mouse Over Me!</h2>
+                    <p>
+                    The effect on this box can be done using 100% CSS.<br><br>
+                    The other boxes all require some Javascript, but the animation is driven by CSS3.
+                    </p>
+    		    </div>
+    		</div>
+    		<div class="back">
+    			<div class="pad">
+    				<h2>check you on the flip side</h2>
+    			</div>
+    		</div>
+    	</div>
     </div>
-  </div>
-  </body>
+    
+    <script src="js/bootstrap.min.js"></script>
+</body>
 </html>
