--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
     <script src="js/flip.js"></script>
+    <script src="js/flickr.js"></script>
 
 	<script type="text/javascript">
     $(function(){
         setupFlip();
+        flickrStuff();
     });
 	</script>
    
@@ -40,6 +42,5 @@
     	</div>
     </div>
     
-    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
