--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <html>
 <head>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
-    <link rel="stylesheet" href="css/flip.css" />
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" />
-    <script src="js/modernizr.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
-    <script src="js/flip.js"></script>
-    <script src="js/flickr.js"></script>
+<link rel="stylesheet" href="css/bootstrap.min.css" />
+<link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
+<link rel="stylesheet" href="css/flip.css" />
+<link rel="stylesheet"
+	href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" />
+<script src="js/modernizr.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+<script src="js/flickr.js"></script>
 
-	<script type="text/javascript">
-    $(function(){
-        setupFlip();
-        flickrStuff();
-    });
-	</script>
-   
+<script type="text/javascript">
+	$(function() {
+		test();
+	});
+
+	function test() {
+		var userID = "57660684%40N04";
+		var method = "flickr.people.getPublicPhotos";
+		var url = "http://api.flickr.com/services/rest/?method=" + method
+				+ "&api_key=bbe7670a8b8a5da0c9b749ef6a0d7f20&user_id=" + userID
+				+ "&format=json&jsoncallback=?";
+		$.ajax({
+			url : url,
+			success : function(data) {
+				createPanels(data);
+			},
+			dataType : 'json'
+		});
+	}
+</script>
+
 </head>
 
 <body>
-    <div class="container">
-    <div class="page-header">
-        <h1>Photo SlideShow</h1>
-    </div>
-    	<div class="hover panel">
-    		<div class="front">
-    		    <div class="pad">
-                    <h2>Mouse Over Me!</h2>
-                    <p>
-                    The effect on this box can be done using 100% CSS.<br><br>
-                    The other boxes all require some Javascript, but the animation is driven by CSS3.
-                    </p>
-    		    </div>
-    		</div>
-    		<div class="back">
-    			<div class="pad">
-    				<h2>check you on the flip side</h2>
-    			</div>
-    		</div>
-    	</div>
-    </div>
-  <div id="images">
-
-</div>
-    
+	<div class="container">
+		<div class="page-header">
+			<h1>Photo SlideShow</h1>
+		</div>
+	</div>
+	
+	<script src="js/flip.js"></script>
 </body>
 </html>
