--- a/index.html
+++ b/index.html
@@ -3,19 +3,28 @@
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
 <link rel="stylesheet" href="css/flip.css" />
+<link rel="stylesheet" href="css/index.css" />
 <link rel="stylesheet"
 	href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" />
 <script src="js/modernizr.min.js"></script>
 <script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 <script src="js/flickr.js"></script>
+<script src="js/flip.js"></script>
 
 <script type="text/javascript">
 	$(function() {
 		test();
+		setupClickEvents();
 	});
+	
+	function setupClickEvents() {
+		$('#toggleFlipping').on('click', function() {
+			toggleFlipping();	
+		});
+	}
 
 	function test() {
 		var userID = "57660684%40N04";
@@ -39,9 +48,8 @@
 	<div class="container">
 		<div class="page-header">
 			<h1>Photo SlideShow</h1>
+			<button id="toggleFlipping" class="btn">Toggle Flipping</button>
 		</div>
 	</div>
-	
-	<script src="js/flip.js"></script>
 </body>
 </html>
